--- a/index.html
+++ b/index.html
@@ -154,15 +154,11 @@ window.addEventListener('DOMContentLoaded', function() {
   langSel.addEventListener('change', function() {
     const lang = langSel.value;
     const t = translations[lang] || translations['en'];
-    // Navbar (update all nav links for language)
-    var navLinks = document.querySelectorAll('nav ul li a');
-    if (navLinks.length >= 5) {
-      navLinks[0].textContent = 'Profile';
-      navLinks[1].textContent = t.about;
-      navLinks[2].textContent = t.services;
-      navLinks[3].textContent = t.brands;
-      navLinks[4].textContent = t.contact;
-    }
+    // Navbar
+    document.querySelector('a[href="#about"]').textContent = t.about;
+    document.querySelector('a[href="#services"]').textContent = t.services;
+    document.querySelector('a[href="#brands"]').textContent = t.brands;
+    document.querySelector('a[href="#contact"]').textContent = t.contact;
     // Main Title
     document.getElementById('mainTitle').textContent = t.mainTitle;
     // Hero
@@ -193,24 +189,8 @@ window.addEventListener('DOMContentLoaded', function() {
     document.querySelector('#testimonials .testimonial h4').textContent = t.testimonialName1;
     // Contact form button
     document.querySelector('#quoteForm button[type="submit"]').textContent = t.contactBtn;
-    // Footer copyright (bottom)
-    var footerBottom = document.querySelector('.footer-bottom');
-    if(footerBottom) footerBottom.innerHTML = t.footer;
-    // Footer brand name
-    var footerBrand = document.querySelector('.footer-brand-name');
-    if(footerBrand) footerBrand.textContent = t.mainTitle;
-    // Footer contact heading
-    var footerContactHeading = document.querySelector('.footer-heading');
-    if(footerContactHeading) footerContactHeading.textContent = t.contactTitle.toUpperCase();
-    // Profile section title
-    var profileTitle = document.querySelector('#profile h2');
-    if(profileTitle) profileTitle.textContent = t.about;
-    // Update testimonials section title if present
-    var testimonialsTitle = document.querySelector('#testimonials h2');
-    if(testimonialsTitle) testimonialsTitle.textContent = t.testimonialsTitle;
-    // Update brands section title if present
-    var brandsTitle = document.querySelector('#brands h2');
-    if(brandsTitle) brandsTitle.textContent = t.brandsTitle;
+    // Footer
+    document.querySelector('footer p').textContent = t.footer;
   });
 });
 </script>
@@ -525,7 +505,7 @@ function shareVia(method) {
   <footer class="footer-main">
     <div class="footer-content">
       <div class="footer-col logo-col">
-        <img src="images/footer_logo.png" alt="Preyash Insurance Logo" class="footer-logo" />
+        <img src="images/footerLogo.png" alt="Preyash Insurance Logo" class="footer-logo" />
         <div class="footer-brand-name">Preyash Insurance Services</div>
         <div class="footer-location">Ahmedabad, Gujarat</div>
         <div class="footer-social">
