--- a/index.html
+++ b/index.html
@@ -551,15 +551,22 @@ function shareVia(method) {
   <footer class="footer-main">
     <div class="footer-content">
       <div class="footer-col logo-col">
-        <img src="images/footerLogo.png" alt="Preyash Insurance Logo" class="footer-logo" />
-
+        <img src="images/footerLogo.png" alt="Preyash Insurance Logo" class="footer-logo" onerror="this.style.display='none'" />
         <div class="footer-brand-name">Preyash Insurance Services</div>
         <div class="footer-location">Ahmedabad, Gujarat</div>
         <div class="footer-social">
-          <a href="https://wa.me/919722574788" target="_blank" title="WhatsApp" class="footer-social-icon whatsapp"><img src="images/whatsapp logo.jpeg" alt="WhatsApp" /></a>
-          <a href="https://www.facebook.com/share/16nn9kcGJ1/" target="_blank" title="Facebook" class="footer-social-icon facebook"><img src="images/facebook.svg" alt="Facebook" /></a>
-          <a href="https://www.instagram.com/insurance_by_dharmesh/profilecard/?igsh=MTg1a29pazVyeHgyNg==" target="_blank" title="Instagram" class="footer-social-icon instagram"><img src="images/instagram.svg" alt="Instagram" /></a>
-          <a href="https://www.linkedin.com/in/dharmesh-panchal-09722574788?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="footer-social-icon linkedin"><img src="images/linkedin.svg" alt="LinkedIn" /></a>
+          <a href="https://wa.me/919722574788" target="_blank" title="WhatsApp" class="footer-social-icon whatsapp">
+            <img src="images/whatsapp%20logo.jpeg" alt="WhatsApp" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg'" />
+          </a>
+          <a href="https://www.facebook.com/share/16nn9kcGJ1/" target="_blank" title="Facebook" class="footer-social-icon facebook">
+            <img src="images/facebook.svg" alt="Facebook" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg'" />
+          </a>
+          <a href="https://www.instagram.com/insurance_by_dharmesh/profilecard/?igsh=MTg1a29pazVyeHgyNg==" target="_blank" title="Instagram" class="footer-social-icon instagram">
+            <img src="images/instagram.svg" alt="Instagram" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png'" />
+          </a>
+          <a href="https://www.linkedin.com/in/dharmesh-panchal-09722574788?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="footer-social-icon linkedin">
+            <img src="images/linkedin.svg" alt="LinkedIn" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png'" />
+          </a>
         </div>
       </div>
       <div class="footer-col contact-col">
@@ -572,7 +579,7 @@ function shareVia(method) {
       <div class="footer-col map-col">
         <div class="footer-heading">Location Map</div>
         <div class="footer-map-embed">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" width="250" height="120" style="border:0;border-radius:10px;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" width="250" height="120" style="border:0;border-radius:10px;min-width:180px;max-width:100%;display:block;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
