--- a/index.html
+++ b/index.html
@@ -549,37 +549,37 @@ function shareVia(method) {
 <script>AOS.init();</script>
   <!-- Modern Footer for Preyash Insurance Services -->
   <footer class="footer-main">
-    <div class="footer-content">
-      <div class="footer-col logo-col">
-        <img src="images/footerLogo.png" alt="Preyash Insurance Logo" class="footer-logo" onerror="this.style.display='none'" />
-        <div class="footer-brand-name">Preyash Insurance Services</div>
-        <div class="footer-location">Ahmedabad, Gujarat</div>
-        <div class="footer-social">
-          <a href="https://wa.me/919722574788" target="_blank" title="WhatsApp" class="footer-social-icon whatsapp">
-            <img src="images/whatsapp%20logo.jpeg" alt="WhatsApp" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg'" />
+    <div class="footer-content" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: flex-start; gap: 32px; max-width: 1200px; margin: 0 auto; padding: 32px 12px 18px 12px;">
+      <div class="footer-col logo-col" style="flex: 1 1 220px; min-width: 220px; max-width: 320px; display: flex; flex-direction: column; align-items: flex-start; gap: 12px;">
+        <img src="images/footerLogo.png" alt="Preyash Insurance Logo" class="footer-logo" style="max-width: 120px; width: 100%; height: auto; margin-bottom: 8px; background: #fff; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.07);" onerror="this.style.display='none'" />
+        <div class="footer-brand-name" style="font-size: 1.25rem; font-weight: bold; color: #fff;">Preyash Insurance Services</div>
+        <div class="footer-location" style="color: #e0e0e0; font-size: 1rem;">Ahmedabad, Gujarat</div>
+        <div class="footer-social" style="display: flex; gap: 12px; margin-top: 8px;">
+          <a href="https://wa.me/919722574788" target="_blank" title="WhatsApp" class="footer-social-icon whatsapp" style="background: #25d366; border-radius: 50%; padding: 6px; display: flex; align-items: center; justify-content: center;">
+            <img src="images/whatsapp%20logo.jpeg" alt="WhatsApp" style="width: 28px; height: 28px;" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg'" />
           </a>
-          <a href="https://www.facebook.com/share/16nn9kcGJ1/" target="_blank" title="Facebook" class="footer-social-icon facebook">
-            <img src="images/facebook.svg" alt="Facebook" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg'" />
+          <a href="https://www.facebook.com/share/16nn9kcGJ1/" target="_blank" title="Facebook" class="footer-social-icon facebook" style="background: #1877f3; border-radius: 50%; padding: 6px; display: flex; align-items: center; justify-content: center;">
+            <img src="images/facebook.svg" alt="Facebook" style="width: 28px; height: 28px;" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg'" />
           </a>
-          <a href="https://www.instagram.com/insurance_by_dharmesh/profilecard/?igsh=MTg1a29pazVyeHgyNg==" target="_blank" title="Instagram" class="footer-social-icon instagram">
-            <img src="images/instagram.svg" alt="Instagram" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png'" />
+          <a href="https://www.instagram.com/insurance_by_dharmesh/profilecard/?igsh=MTg1a29pazVyeHgyNg==" target="_blank" title="Instagram" class="footer-social-icon instagram" style="background: #e1306c; border-radius: 50%; padding: 6px; display: flex; align-items: center; justify-content: center;">
+            <img src="images/instagram.svg" alt="Instagram" style="width: 28px; height: 28px;" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png'" />
           </a>
-          <a href="https://www.linkedin.com/in/dharmesh-panchal-09722574788?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="footer-social-icon linkedin">
-            <img src="images/linkedin.svg" alt="LinkedIn" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png'" />
+          <a href="https://www.linkedin.com/in/dharmesh-panchal-09722574788?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="footer-social-icon linkedin" style="background: #0077b5; border-radius: 50%; padding: 6px; display: flex; align-items: center; justify-content: center;">
+            <img src="images/linkedin.svg" alt="LinkedIn" style="width: 28px; height: 28px;" onerror="this.src='https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png'" />
           </a>
         </div>
       </div>
-      <div class="footer-col contact-col">
-        <div class="footer-heading">CONTACT</div>
-        <div class="footer-contact-item"><span>Email:</span> <a href="mailto:dpinsurance2133@gmail.com">dpinsurance2133@gmail.com</a></div>
-        <div class="footer-contact-item"><span>Phone:</span> <a href="tel:9722574788">9722574788</a></div>
-        <div class="footer-heading" style="margin-top:1.2rem;">Visitor Count</div>
-        <div id="visitorCount" class="footer-visitor-count">0</div>
+      <div class="footer-col contact-col" style="flex: 1 1 220px; min-width: 220px; max-width: 320px; display: flex; flex-direction: column; align-items: flex-start; gap: 8px;">
+        <div class="footer-heading" style="color:#fff; font-size:1.1rem; font-weight:600; letter-spacing:1px; margin-bottom:8px;">CONTACT</div>
+        <div class="footer-contact-item" style="color:#e0e0e0; margin-bottom:4px;"><span style="color:#fff;">Email:</span> <a href="mailto:dpinsurance2133@gmail.com" style="color:#fff; text-decoration:underline;">dpinsurance2133@gmail.com</a></div>
+        <div class="footer-contact-item" style="color:#e0e0e0; margin-bottom:8px;"><span style="color:#fff;">Phone:</span> <a href="tel:9722574788" style="color:#fff; text-decoration:underline;">9722574788</a></div>
+        <div class="footer-heading" style="margin-top:1.2rem; color:#fff; font-size:1.1rem; font-weight:600;">Visitor Count</div>
+        <div id="visitorCount" class="footer-visitor-count" style="color:#ffea00; font-size:2.2rem; font-weight:bold; margin-bottom:8px;">0</div>
       </div>
-      <div class="footer-col map-col">
-        <div class="footer-heading">Location Map</div>
-        <div class="footer-map-embed">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" width="250" height="120" style="border:0;border-radius:10px;min-width:180px;max-width:100%;display:block;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="footer-col map-col" style="flex: 1 1 260px; min-width: 220px; max-width: 340px; display: flex; flex-direction: column; align-items: flex-start; gap: 8px;">
+        <div class="footer-heading" style="color:#fff; font-size:1.1rem; font-weight:600;">Location Map</div>
+        <div class="footer-map-embed" style="margin-top:8px;">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" width="250" height="120" style="border:0;border-radius:10px;min-width:180px;max-width:100%;display:block;box-shadow:0 2px 8px rgba(0,0,0,0.13);" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
