--- a/index.html
+++ b/index.html
@@ -26,15 +26,67 @@
 
 
 <header style="background: linear-gradient(to right, #004080, #007bff); color: white; padding: 1rem 0; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2); position: sticky; top: 0; z-index: 100;">
-  <div style="position: relative; display: flex; align-items: center; justify-content: center; gap: 18px; max-width: 1100px; margin: 0 auto;">
+  <div class="header-flex-wrap">
     <img src="images/LogoDP.png" alt="Logo" height="60" id="logoDP" style="margin-right: 0; transition: transform 0.7s cubic-bezier(.68,-0.55,.27,1.55);" />
     <h1 id="mainTitle" style="margin: 0; font-size: 2.1rem; font-weight: bold; letter-spacing: 1px;">PREYASH INSURANCE SERVICES</h1>
-    <select id="languageSelect" style="position: absolute; top: 0; right: 0; margin: 12px 18px 0 0; padding: 6px 18px; border-radius: 20px; border: none; background: #fff; color: #004080; font-weight: bold; font-size: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.08); cursor: pointer; outline: none;">
-      <option value="en">English</option>
-      <option value="hi">हिन्दी</option>
-      <option value="gu">ગુજરાતી</option>
-    </select>
+    <div class="header-lang-wrap">
+      <select id="languageSelect">
+        <option value="en">English</option>
+        <option value="hi">हिन्दी</option>
+        <option value="gu">ગુજરાતી</option>
+      </select>
+    </div>
   </div>
+  <style>
+    /* Responsive header flex for language selector below title on mobile */
+    .header-flex-wrap {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 18px;
+      max-width: 1100px;
+      margin: 0 auto;
+      flex-wrap: wrap;
+    }
+    .header-lang-wrap {
+      display: flex;
+      align-items: center;
+      margin-left: 12px;
+    }
+    #languageSelect {
+      padding: 6px 18px;
+      border-radius: 20px;
+      border: none;
+      background: #fff;
+      color: #004080;
+      font-weight: bold;
+      font-size: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+      cursor: pointer;
+      outline: none;
+      margin: 0;
+    }
+    @media (max-width: 600px) {
+      .header-flex-wrap {
+        flex-direction: column;
+        align-items: center;
+        gap: 8px;
+      }
+      .header-lang-wrap {
+        width: 100%;
+        justify-content: center;
+        margin: 0;
+        margin-top: 6px;
+      }
+      #languageSelect {
+        width: 90vw;
+        max-width: 320px;
+        margin: 0 auto;
+        display: block;
+      }
+    }
+  </style>
   <nav>
     <ul style="list-style: none; display: flex; justify-content: center; gap: 20px; margin-top: 10px; padding: 0;">
       <li><a href="#profile">Profile</a></li>
