Trusted by 500+ Added

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ window.addEventListener('DOMContentLoaded', function() {
     <li><span><strong>15+ Years of Experience</strong></span></li>
     <li>Compare <strong>15+ Top Brands</strong></li>
     <li><strong>Quick Claim Support</strong></li>
-    <li>Trusted by <strong><span id="clientCount">0</span>+ Clients</strong></li>
+    <li>Trusted by <strong>500+ Clients</strong></li>
   </ul>
 </section>
 
