500+ clients in language change updated

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ window.addEventListener('DOMContentLoaded', function() {
         '15+ Years of Experience',
         'Compare 15+ Top Brands',
         'Quick Claim Support',
-        'Trusted by <span id="clientCount">0</span>+ Clients'
+        'Trusted by 500+ Clients'
       ],
       servicesTitle: 'Our Services',
       brandsTitle: 'Top Insurance Brands',
@@ -162,7 +162,7 @@ window.addEventListener('DOMContentLoaded', function() {
         '15+ वर्षों का अनुभव',
         '15+ शीर्ष ब्रांड्स की तुलना',
         'त्वरित क्लेम सहायता',
-        'विश्वासपात्र <span id="clientCount">0</span>+ ग्राहक'
+        'विश्वासपात्र 500+ ग्राहक'
       ],
       servicesTitle: 'हमारी सेवाएं',
       brandsTitle: 'शीर्ष बीमा ब्रांड्स',
@@ -196,7 +196,7 @@ window.addEventListener('DOMContentLoaded', function() {
         '15+ વર્ષનો અનુભવ',
         '15+ ટોચના બ્રાન્ડ્સની તુલના',
         'ઝડપી ક્લેમ સપોર્ટ',
-        'વિશ્વાસુ <span id="clientCount">0</span>+ ક્લાયન્ટ'
+        'વિશ્વાસુ 500+ ક્લાયન્ટ'
       ],
       servicesTitle: 'અમારી સેવાઓ',
       brandsTitle: 'ટોપ ઇન્શ્યોરન્સ બ્રાન્ડ્સ',
