--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <li><a href="#about">About Us</a></li>
       <li><a href="#services">Our Services</a></li>
       <li><a href="#brands">Top Brands</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#contact">Contact Us</a></li>
     </ul>
   </nav>
 </header>
