Changed the name of Button and Contact

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ window.addEventListener('DOMContentLoaded', function() {
       about: 'About Us',
       services: 'Our Services',
       brands: 'Top Brands',
-      contact: 'Contact',
+      contact: 'Contact Us',
       hero1: 'Your Trusted Multi-Brand Insurance Partner',
       hero2: 'We help you compare and choose the best insurance from top providers.',
       quote: 'Get a Free Quote',
@@ -139,7 +139,7 @@ window.addEventListener('DOMContentLoaded', function() {
       testimonialsTitle: 'What Our Clients Say',
       testimonial1: '"Got my policy in one day. Amazing support!"',
       testimonialName1: '- Dharmesh Panchal, Ahmedabad',
-      contactBtn: 'Request Quote',
+      contactBtn: 'Submit',
       footer: '© 2025 PREYASH INSURANCE SERVICES. All rights reserved.'
     },
     hi: {
@@ -461,7 +461,7 @@ window.addEventListener('DOMContentLoaded', function() {
 </select>
 
     <textarea name="userQueryMain" placeholder="Your Query (max 150 characters)" maxlength="150" style="margin-top:10px;"></textarea>
-    <button type="submit">Request Quote</button>
+    <button type="submit">Submit</button>
     <p id="formMessage"></p>
   </form>
 </section>
