Iframe working with features

--- a/index.html
+++ b/index.html
@@ -632,10 +632,10 @@ function shareVia(method) {
           <span class="plus-symbol">+</span>
         </div>
       </div>
-      <div class="footer-col map-col" style="flex: 1 1 260px; min-width: 220px; max-width: 340px; display: flex; flex-direction: column; align-items: flex-start; gap: 8px;">
-        <div class="footer-heading" style="color:#fff; font-size:1.1rem; font-weight:600;">Location Map</div>
-        <div class="footer-map-embed" style="margin-top:8px;">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" width="250" height="120" style="border:0;border-radius:10px;min-width:180px;max-width:100%;display:block;box-shadow:0 2px 8px rgba(0,0,0,0.13);" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="footer-col map-col" style="flex: 1 1 320px; min-width: 280px; max-width: 380px; display: flex; flex-direction: column; align-items: center; background: rgba(255,255,255,0.03); padding: 24px 20px; border-radius: 16px;">
+        <div class="footer-heading" style="color:#fff; font-size:1.1rem; font-weight:600; margin-bottom: 20px; text-align: center;">Location Map</div>
+        <div class="footer-map-embed" style="width: 100%; display: flex; justify-content: center; align-items: center; margin-bottom: 8px;">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.024964024052!2d72.5495403!3d23.0890833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e835ac6ba0107%3A0x4afff16c99e1ee29!2sPREYASH%20Insurance%20Services%20and%20Investment%20Saathi%20Gujarat!5e0!3m2!1sen!2sin!4v1720340000000!5m2!1sen!2sin" style="width:280px; height:280px; border:0; border-radius:12px; display:block; box-shadow:0 2px 10px rgba(0,0,0,0.12); aspect-ratio:1/1; background: #fff;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
