--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ document.addEventListener('DOMContentLoaded', function() {
       about: 'About Us',
       services: 'Our Services',
       brands: 'Top Brands',
-      contact: 'Contact',
+      contact: 'Contact Us',
       hero1: 'Your Trusted Multi-Brand Insurance Partner',
       hero2: 'We help you compare and choose the best insurance from top providers.',
       quote: 'Get a Free Quote',
@@ -846,7 +846,7 @@ document.getElementById('quotePopupForm').onsubmit = function(e) {
         <div class="footer-heading" style="color:#fff; font-size:1.1rem; font-weight:600; letter-spacing:1px; margin-bottom:8px;">CONTACT</div>
         <div class="footer-contact-item" style="color:#e0e0e0; margin-bottom:4px;"><span style="color:#fff;">Email:</span> <a href="mailto:dpinsurance2133@gmail.com" style="color:#fff; text-decoration:underline;">dpinsurance2133@gmail.com</a></div>
         <div class="footer-contact-item" style="color:#e0e0e0; margin-bottom:8px;"><span style="color:#fff;">Phone:</span> <a href="tel:9722574788" style="color:#fff; text-decoration:underline;">9722574788</a></div>
-        <div class="footer-heading" style="margin-top:1.2rem; color:#fff; font-size:1.1rem; font-weight:600;">Visitor Count</div>
+        <div class="footer-heading" style="margin-top:1.2rem; color:#fff; font-size:1.5rem; font-weight:600;">Visitor Count</div>
         <div id="visitorCount" class="footer-visitor-count" style="color:#ffea00; font-size:2.2rem; font-weight:bold; margin-bottom:8px; position:relative; cursor:help;" title="Live visitor count - updates with each visit">
           <span id="visitorCountNumber">0</span>
           <span class="plus-symbol">+</span>
