Update main.js and index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/animations.css" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script src="/js/main.js" defer></script>
+  <!-- <script src="/js/main.js" defer></script> -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
 </head>
 <body>
@@ -170,7 +170,7 @@ document.addEventListener('DOMContentLoaded', function() {
       servicesTitle: 'हमारी सेवाएं',
       brandsTitle: 'शीर्ष बीमा ब्रांड्स',
       reviewsTitle: 'हमारी सेवाएं पसंद आईं? ❤️',
-      reviewsDesc: 'अन्य लोगों को विश्वसनीय बीमा सहायता खोजने में मदद करने के लिए हमें Google पर रिव्यू दें।',
+      reviewsDesc: 'अन्य लोगों को विश्वसनीय बीमा सहायता खोजने के लिए हमें Google पर रिव्यू दें।',
       reviewBtn: '🌟 Google रिव्यू दें',
       contactTitle: 'संपर्क करें',
       testimonialsTitle: 'हमारे ग्राहक क्या कहते हैं',
@@ -945,9 +945,6 @@ document.getElementById('quotePopupForm').onsubmit = function(e) {
         // Small delay to ensure smooth animation
         setTimeout(updateVisitorCount, 100);
       }
-    });
-    // Visitor counter functionality moved to script.js
-    });
     });
   </script>
 </body>
